[package]
name = "mcp-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Model Context Protocol (MCP) server registry and management service for AI-CORE platform"

[dependencies]
# Workspace dependencies
AI-PLATFORM-shared = { workspace = true }

# Core async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time and identifiers
chrono = { workspace = true }
uuid = { workspace = true }

# Validation
validator = { workspace = true }
regex = { workspace = true }

# Authentication & Security
jsonwebtoken = { workspace = true }

# Database drivers
sqlx = { workspace = true }
redis = { workspace = true }

# Connection pooling
deadpool-postgres = { workspace = true }
deadpool-redis = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

# HTTP Client
reqwest = { workspace = true }

# Rate limiting
governor = { workspace = true }

# System utilities
num_cpus = { workspace = true }
bytes = { workspace = true }

# MCP specific dependencies
semver = "1.0"
url = "2.5"
dashmap = "5.5"
parking_lot = "0.12"

# Process management
nix = "0.27"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Additional dependencies
rand = "0.8"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

[features]
default = ["postgres", "redis"]
postgres = ["sqlx/postgres"]
redis = ["redis/tokio-comp"]
metrics = ["dep:prometheus", "dep:metrics"]

[lib]
name = "mcp_manager"
path = "src/lib.rs"

[[bin]]
name = "mcp-manager"
path = "src/main.rs"
