[package]
name = "service-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Service discovery and registry service for AI-CORE platform microservices architecture"

[dependencies]
# Workspace dependencies
AI-PLATFORM-shared = { workspace = true }

# Core async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time and identifiers
chrono = { workspace = true }
uuid = { workspace = true }

# Validation
validator = { workspace = true }
regex = { workspace = true }

# Authentication & Security
jsonwebtoken = { workspace = true }

# Database drivers
sqlx = { workspace = true }
redis = { workspace = true }

# Connection pooling
deadpool-postgres = { workspace = true }
deadpool-redis = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

# HTTP Client
reqwest = { workspace = true }

# Rate limiting
governor = { workspace = true }

# System utilities
num_cpus = { workspace = true }
bytes = { workspace = true }

# Service discovery specific dependencies
semver = "1.0"
url = "2.5"
dashmap = "5.5"
parking_lot = "0.12"

# Circuit breaker and resilience patterns (using tokio-retry instead)
tokio-retry = "0.3"

# Load balancing
rand = "0.8"

# Health checking and monitoring (using tokio built-ins)
tokio-stream = "0.1"

# Process and signal management
nix = "0.27"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Service mesh integration (simplified for now)
# etcd-rs = { version = "1.2", optional = true }
# consul = { version = "0.4", optional = true }

# Network utilities
socket2 = "0.5"

# Additional utilities
itertools = "0.12"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

[features]
default = ["postgres", "redis"]
postgres = ["sqlx/postgres"]
redis = ["redis/tokio-comp"]
metrics = ["dep:prometheus", "dep:metrics"]
# etcd = ["dep:etcd-rs"]
# consul = ["dep:consul"]

[lib]
name = "service_discovery"
path = "src/lib.rs"

[[bin]]
name = "service-discovery-server"
path = "src/main.rs"
