[package]
name = "sre-monitor"
version = "0.1.0"
edition = "2021"
description = "SRE monitoring backend service for AI-CORE testing infrastructure"
authors = ["AI-CORE Team"]
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "json", "query"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Monitoring & Metrics
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for external service monitoring
reqwest = { version = "0.11", features = ["json"] }

# Background task processing
tokio-cron-scheduler = "0.10"

# Shared types (temporarily disabled)
# shared = { path = "../../shared" }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
