[package]
name = "text-processing-mcp"
version = "0.1.0"
edition = "2021"
authors = ["AI-CORE MVP Team"]
description = "Text Processing MCP Server with Gemini AI for text analysis and enhancement"
license = "MIT"

[[bin]]
name = "text-processing-mcp"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client for Gemini API
reqwest = { workspace = true }

# Configuration
clap = { workspace = true }

# Text processing utilities
regex = "1.0"
unicode-segmentation = "1.10"

[dev-dependencies]
tokio-test = "0.4"
